[레거시 코드 리팩터링 - 2단계] 파랑(이하은) 미션 제출합니다. (#341)
* refactor: Product dao에서 JpaReository로 변경

* chore: java 8에서 11로 변경

* refactor: MenuGroup dao에서 JpaReository로 변경

* refactor: Menu dao에서 JpaReository로 변경

* refactor: OrderTable과 TableGroup dao에서 JpaReository로 변경

* refactor: Order dao에서 JpaReository로 변경

* refactor: product setter 제거 및 디렉토리 변경

* refactor: menu product dao에서 jpa repository로 변경 및 menu setter 제거

* refactor: table group 관련 update method 생성 및 디렉토리 변경

* refactor: order line item dao 삭제 및 디렉토리 변경

* refactor: 상품의 controller와 service에서 dto를 사용하도록 변경

* chore: spring validation 의존성 추가

* refactor: 메뉴 그룹의 controller와 service에서 dto를 사용하도록 변경

* refactor: 메뉴의 controller와 service에서 dto를 사용하도록 변경 및 검증 로직 이동

* feat: jpa auditing 적용

* refactor: 테이블 그룹의 controller와 service에서 dto를 사용하도록 변경 및 검증 로직 이동

* refactor: 주문 테이블의 controller와 service에서 dto를 사용하도록 변경 및 검증 로직 이동

* refactor: 주문의 controller와 service에서 dto를 사용하도록 변경 및 검증 로직 이동

* refactor: 디렉토리 이동

* refactor: service, controller 응답값을 도메인이 아닌 dto로 변경

* refactor: 접근 제어자 보수적으로 변경

* refactor: cascadeType에서 merge 제거

* refactor: 사용하지 않는 setter 메서드 제거

* refactor: final 키워드 제거

* refactor: `RequesetMapping` 어노테이션 추가

* fix: 컬럼 이름 오타 수정