@@ -1,150 +1,183 @@
 package kitchenpos.application;
 
+import static kitchenpos.domain.order.OrderStatus.COMPLETION;
+import static kitchenpos.domain.order.OrderStatus.COOKING;
+import static kitchenpos.domain.order.OrderStatus.MEAL;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.junit.jupiter.api.Assertions.assertAll;
 
 import java.math.BigDecimal;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
-import kitchenpos.dao.MenuDao;
-import kitchenpos.dao.MenuGroupDao;
-import kitchenpos.dao.OrderDao;
-import kitchenpos.dao.OrderTableDao;
-import kitchenpos.dao.ProductDao;
-import kitchenpos.domain.Menu;
-import kitchenpos.domain.MenuGroup;
-import kitchenpos.domain.MenuProduct;
-import kitchenpos.domain.Order;
-import kitchenpos.domain.OrderLineItem;
-import kitchenpos.domain.OrderTable;
-import kitchenpos.domain.Product;
+import kitchenpos.domain.menu.Menu;
+import kitchenpos.domain.menu.MenuGroup;
+import kitchenpos.domain.menu.MenuGroupRepository;
+import kitchenpos.domain.menu.MenuProduct;
+import kitchenpos.domain.menu.MenuRepository;
+import kitchenpos.domain.order.Order;
+import kitchenpos.domain.order.OrderLineItem;
+import kitchenpos.domain.order.OrderRepository;
+import kitchenpos.domain.ordertable.OrderTable;
+import kitchenpos.domain.ordertable.OrderTableRepository;
+import kitchenpos.domain.product.Product;
+import kitchenpos.domain.product.ProductRepository;
+import kitchenpos.dto.request.OrderLineItemRequest;
+import kitchenpos.dto.request.OrderRequest;
+import kitchenpos.dto.request.OrderStatusRequest;
+import kitchenpos.dto.response.OrderResponse;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 
 class OrderServiceTest extends ServiceTest {
-
     @Autowired
     private OrderService orderService;
 
     @Autowired
-    protected OrderDao orderDao;
+    private OrderRepository orderRepository;
 
     @Autowired
-    private ProductDao productDao;
+    private ProductRepository productRepository;
 
     @Autowired
-    private MenuGroupDao menuGroupDao;
+    private MenuGroupRepository menuGroupRepository;
 
     @Autowired
-    private MenuDao menuDao;
+    private MenuRepository menuRepository;
 
     @Autowired
-    private OrderTableDao orderTableDao;
+    private OrderTableRepository orderTableRepository;
 
     @Test
     void 주문을_생성할_수_있다() {
-        Product product1 = productDao.save(new Product("상품1", new BigDecimal(10000)));
-        Product product2 = productDao.save(new Product("상품2", new BigDecimal(20000)));
+        Product product1 = productRepository.save(new Product("상품1", new BigDecimal(10000)));
+        Product product2 = productRepository.save(new Product("상품2", new BigDecimal(20000)));
 
-        MenuGroup menuGroup = menuGroupDao.save(new MenuGroup("메뉴 그룹1"));
+        MenuProduct menuProduct1 = new MenuProduct(product1, 1);
+        MenuProduct menuProduct2 = new MenuProduct(product2, 2);
+        MenuProduct menuProduct3 = new MenuProduct(product2, 2);
+        MenuProduct menuProduct4 = new MenuProduct(product2, 2);
 
-        MenuProduct menuProduct1 = new MenuProduct(1L, null, product1.getId(), 1);
-        MenuProduct menuProduct2 = new MenuProduct(1L, null, product2.getId(), 2);
+        MenuGroup menuGroup = menuGroupRepository.save(new MenuGroup("메뉴 그룹1"));
 
-        Menu menu1 = menuDao.save(new Menu("메뉴1", new BigDecimal(40000), menuGroup.getId(),
-                new ArrayList<>(Arrays.asList(menuProduct1, menuProduct2))));
-        Menu menu2 = menuDao.save(new Menu("메뉴2", new BigDecimal(40000), menuGroup.getId(),
-                new ArrayList<>(Arrays.asList(menuProduct1, menuProduct2))));
+        Menu menu1 = menuRepository.save(new Menu("메뉴1", new BigDecimal(40000), menuGroup,
+                List.of(menuProduct1, menuProduct2)));
+        Menu menu2 = menuRepository.save(new Menu("메뉴2", new BigDecimal(40000), menuGroup,
+                List.of(menuProduct3, menuProduct4)));
 
-        OrderTable orderTable = orderTableDao.save(new OrderTable(null, 5, false));
+        OrderTable orderTable = orderTableRepository.save(new OrderTable(null, 5, false));
 
-        OrderLineItem orderLineItem1 = new OrderLineItem(null, menu1.getId(), 1);
-        OrderLineItem orderLineItem2 = new OrderLineItem(null, menu2.getId(), 2);
+        OrderLineItemRequest orderLineItemRequest1 = new OrderLineItemRequest(menu1.getId(), 1);
+        OrderLineItemRequest orderLineItemRequest2 = new OrderLineItemRequest(menu2.getId(), 2);
 
-        Order order = new Order(orderTable.getId(), null,
-                new ArrayList<>(Arrays.asList(orderLineItem1, orderLineItem2)));
+        OrderRequest request = new OrderRequest(orderTable.getId(),
+                List.of(orderLineItemRequest1, orderLineItemRequest2));
 
-        Order actual = orderService.create(order);
+        OrderResponse actual = orderService.create(request);
 
         assertAll(() -> {
             assertThat(actual.getId()).isNotNull();
-            assertThat(actual.getOrderStatus()).isEqualTo("COOKING");
-            assertThat(actual.getOrderLineItems()).hasSize(2);
+            assertThat(actual.getOrderStatus()).isEqualTo(COOKING);
+            assertThat(actual.getOrderLineItems()).hasSize(2)
+                    .extracting("seq")
+                    .isNotNull();
         });
     }
 
     @Test
     void 주문_항목이_비어있는_경우_주문을_생성할_수_없다() {
-        OrderTable orderTable = orderTableDao.save(new OrderTable(null, 5, false));
+        OrderTable orderTable = orderTableRepository.save(new OrderTable(null, 5, false));
 
-        Order order = new Order(orderTable.getId(), null, new ArrayList<>());
+        OrderRequest request = new OrderRequest(orderTable.getId(), new ArrayList<>());
 
-        assertThatThrownBy(() -> orderService.create(order)).isInstanceOf(IllegalArgumentException.class);
+        assertThatThrownBy(() -> orderService.create(request)).isInstanceOf(IllegalArgumentException.class);
     }
 
     @Test
     void 주문_테이블이_빈_테이블인_경우_주문을_생성할_수_없다() {
-        Product product1 = productDao.save(new Product("상품1", new BigDecimal(10000)));
-        Product product2 = productDao.save(new Product("상품2", new BigDecimal(20000)));
+        Product product1 = productRepository.save(new Product("상품1", new BigDecimal(10000)));
+        Product product2 = productRepository.save(new Product("상품2", new BigDecimal(20000)));
 
-        MenuGroup menuGroup = menuGroupDao.save(new MenuGroup("메뉴 그룹1"));
+        MenuProduct menuProduct1 = new MenuProduct(product1, 1);
+        MenuProduct menuProduct2 = new MenuProduct(product2, 2);
+        MenuProduct menuProduct3 = new MenuProduct(product2, 2);
+        MenuProduct menuProduct4 = new MenuProduct(product2, 2);
 
-        MenuProduct menuProduct1 = new MenuProduct(1L, null, product1.getId(), 1);
-        MenuProduct menuProduct2 = new MenuProduct(1L, null, product2.getId(), 2);
+        MenuGroup menuGroup = menuGroupRepository.save(new MenuGroup("메뉴 그룹1"));
 
-        Menu menu1 = menuDao.save(new Menu("메뉴1", new BigDecimal(40000), menuGroup.getId(),
-                new ArrayList<>(Arrays.asList(menuProduct1, menuProduct2))));
-        Menu menu2 = menuDao.save(new Menu("메뉴2", new BigDecimal(40000), menuGroup.getId(),
-                new ArrayList<>(Arrays.asList(menuProduct1, menuProduct2))));
+        Menu menu1 = menuRepository.save(new Menu("메뉴1", new BigDecimal(40000), menuGroup,
+                List.of(menuProduct1, menuProduct2)));
+        Menu menu2 = menuRepository.save(new Menu("메뉴2", new BigDecimal(40000), menuGroup,
+                List.of(menuProduct3, menuProduct4)));
 
-        OrderTable orderTable = orderTableDao.save(new OrderTable(null, 5, true));
+        OrderLineItemRequest orderLineItemRequest1 = new OrderLineItemRequest(menu1.getId(), 1);
+        OrderLineItemRequest orderLineItemRequest2 = new OrderLineItemRequest(menu2.getId(), 2);
 
-        OrderLineItem orderLineItem1 = new OrderLineItem(null, menu1.getId(), 1);
-        OrderLineItem orderLineItem2 = new OrderLineItem(null, menu2.getId(), 2);
+        OrderTable orderTable = orderTableRepository.save(new OrderTable(null, 5, true));
 
-        Order order = new Order(orderTable.getId(), null,
-                new ArrayList<>(Arrays.asList(orderLineItem1, orderLineItem2)));
+        OrderRequest request = new OrderRequest(orderTable.getId(),
+                List.of(orderLineItemRequest1, orderLineItemRequest2));
 
-        assertThatThrownBy(() -> orderService.create(order)).isInstanceOf(IllegalArgumentException.class);
+        assertThatThrownBy(() -> orderService.create(request)).isInstanceOf(IllegalArgumentException.class);
     }
 
     @Test
     void 전체_주문_목록을_조회할_수_있다() {
-        OrderTable orderTable = orderTableDao.save(new OrderTable(null, 5, false));
+        Product product = productRepository.save(new Product("상품", new BigDecimal(10000)));
+        MenuProduct menuProduct = new MenuProduct(product, 1);
+        MenuGroup menuGroup = menuGroupRepository.save(new MenuGroup("메뉴 그룹1"));
+        Menu menu = menuRepository.save(new Menu("메뉴1", new BigDecimal(10000), menuGroup, List.of(menuProduct)));
 
-        Order order1 = new Order(orderTable.getId(), "COOKING", new ArrayList<>());
-        Order order2 = new Order(orderTable.getId(), "COOKING", new ArrayList<>());
+        OrderTable orderTable = orderTableRepository.save(new OrderTable(null, 5, false));
 
-        orderDao.save(order1);
-        orderDao.save(order2);
+        OrderLineItem orderLineItem1 = new OrderLineItem(menu.getId(), 1);
+        OrderLineItem orderLineItem2 = new OrderLineItem(menu.getId(), 1);
 
-        List<Order> actual = orderService.list();
+        Order order1 = new Order(orderTable, COOKING, List.of(orderLineItem1));
+        Order order2 = new Order(orderTable, COOKING, List.of(orderLineItem2));
+
+        orderRepository.save(order1);
+        orderRepository.save(order2);
+
+        List<OrderResponse> actual = orderService.list();
 
         assertThat(actual).hasSize(2);
     }
 
     @Test
     void 주문_상태를_변경할_수_있다() {
-        OrderTable orderTable = orderTableDao.save(new OrderTable(null, 5, false));
+        Product product = productRepository.save(new Product("상품", new BigDecimal(10000)));
+        MenuProduct menuProduct = new MenuProduct(product, 1);
+        MenuGroup menuGroup = menuGroupRepository.save(new MenuGroup("메뉴 그룹1"));
+        Menu menu = menuRepository.save(new Menu("메뉴1", new BigDecimal(10000), menuGroup, List.of(menuProduct)));
 
-        Order order = orderDao.save(new Order(orderTable.getId(), "COOKING", new ArrayList<>()));
-        Order newOrder = orderDao.save(new Order(orderTable.getId(), "MEAL", new ArrayList<>()));
+        OrderTable orderTable = orderTableRepository.save(new OrderTable(null, 5, false));
 
-        Order actual = orderService.changeOrderStatus(order.getId(), newOrder);
+        OrderLineItem orderLineItem = new OrderLineItem(menu.getId(), 1);
 
-        assertThat(actual.getOrderStatus()).isEqualTo("MEAL");
+        Order order = orderRepository.save(new Order(orderTable, COOKING, List.of(orderLineItem)));
+        OrderStatusRequest request = new OrderStatusRequest(MEAL);
+
+        OrderResponse actual = orderService.changeOrderStatus(order.getId(), request);
+
+        assertThat(actual.getOrderStatus()).isEqualTo(MEAL);
     }
 
     @Test
     void 기존_주문_상태가_계산_완료_상태인_경우_상태를_변경할_수_없다() {
-        OrderTable orderTable = orderTableDao.save(new OrderTable(null, 5, false));
+        Product product = productRepository.save(new Product("상품", new BigDecimal(10000)));
+        MenuProduct menuProduct = new MenuProduct(product, 1);
+        MenuGroup menuGroup = menuGroupRepository.save(new MenuGroup("메뉴 그룹1"));
+        Menu menu = menuRepository.save(new Menu("메뉴1", new BigDecimal(10000), menuGroup, List.of(menuProduct)));
 
-        Order order = orderDao.save(new Order(orderTable.getId(), "COMPLETION", new ArrayList<>()));
-        Order newOrder = orderDao.save(new Order(orderTable.getId(), "MEAL", new ArrayList<>()));
+        OrderTable orderTable = orderTableRepository.save(new OrderTable(null, 5, false));
 
-        assertThatThrownBy(() -> orderService.changeOrderStatus(order.getId(), newOrder))
+        OrderLineItem orderLineItem = new OrderLineItem(menu.getId(), 1);
+
+        Order order = orderRepository.save(new Order(orderTable, COMPLETION, List.of(orderLineItem)));
+        OrderStatusRequest request = new OrderStatusRequest(MEAL);
+
+        assertThatThrownBy(() -> orderService.changeOrderStatus(order.getId(), request))
                 .isInstanceOf(IllegalArgumentException.class);
     }
 }
